--- a/index.html
+++ b/index.html
@@ -1,10 +1,125 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eleos Conference 2026</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background: #222;
+      color: white;
+      text-align: center;
+      padding: 3rem 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5rem;
+    }
+    header p {
+      margin: 0.5rem 0 0;
+      font-size: 1.2rem;
+      color: #ddd;
+    }
+    nav {
+      background: #444;
+      padding: 0.5rem;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    h2 {
+      border-bottom: 2px solid #eee;
+      padding-bottom: 0.5rem;
+    }
+    .btn {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background: #0066cc;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+    .btn:hover {
+      background: #004999;
+    }
+    footer {
+      background: #222;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      margin-top: 3rem;
+    }
+  </style>
 </head>
 <body>
-  <h1>Welcome to Eleos Conference 2026</h1>
-  <p>This is the official website. More info coming soon.</p>
+  <header>
+    <h1>Eleos Conference 2026</h1>
+    <p>Faith • Leadership • Renewal</p>
+  </header>
+
+  <nav>
+    <a href="#about">About</a>
+    <a href="#schedule">Schedule</a>
+    <a href="#speakers">Speakers</a>
+    <a href="#register">Register</a>
+  </nav>
+
+  <section id="about">
+    <h2>About</h2>
+    <p>
+      Eleos Conference 2026 is a gathering of leaders, teachers, and disciples dedicated
+      to exploring the Word of God, strengthening the Church, and equipping believers
+      for ministry. Join us for a time of worship, teaching, and fellowship.
+    </p>
+  </section>
+
+  <section id="schedule">
+    <h2>Schedule</h2>
+    <p>
+      The conference will take place in 2026. A detailed schedule of sessions, workshops,
+      and keynote speakers will be released soon.
+    </p>
+  </section>
+
+  <section id="speakers">
+    <h2>Speakers</h2>
+    <p>
+      Our lineup of keynote speakers and teachers will be announced in the coming months.
+      Stay tuned!
+    </p>
+  </section>
+
+  <section id="register">
+    <h2>Register</h2>
+    <p>
+      Tickets are $20 per person. Reserve your spot today and be part of Eleos Conference 2026.
+    </p>
+    <!-- Placeholder: replace # with Cognito form embed later -->
+    <a href="#" class="btn">Register Now</a>
+  </section>
+
+  <footer>
+    <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
+  </footer>
 </body>
 </html>
+
