--- a/index.html
+++ b/index.html
@@ -7,28 +7,29 @@
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: "Segoe UI", Arial, sans-serif;
       background: #f9f9f9;
       color: #333;
+      line-height: 1.6;
     }
     header {
-      background: #222;
+      background: linear-gradient(135deg, #003366, #0066cc);
       color: white;
       text-align: center;
       padding: 3rem 1rem;
     }
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: 2.8rem;
     }
     header p {
-      margin: 0.5rem 0 0;
       font-size: 1.2rem;
+      margin-top: 0.5rem;
       color: #ddd;
     }
     nav {
-      background: #444;
-      padding: 0.5rem;
+      background: #222;
+      padding: 0.75rem;
       text-align: center;
     }
     nav a {
@@ -38,16 +39,18 @@
       font-weight: bold;
     }
     nav a:hover {
-      text-decoration: underline;
+      color: #00bfff;
     }
     section {
-      max-width: 900px;
+      max-width: 1000px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
     h2 {
       border-bottom: 2px solid #eee;
       padding-bottom: 0.5rem;
+      margin-bottom: 1rem;
+      color: #003366;
     }
     .btn {
       display: inline-block;
@@ -62,7 +65,7 @@
       background: #004999;
     }
     footer {
-      background: #222;
+      background: #003366;
       color: white;
       text-align: center;
       padding: 1rem;
@@ -113,7 +116,7 @@
     <p>
       Tickets are $20 per person. Reserve your spot today and be part of Eleos Conference 2026.
     </p>
-    <!-- Placeholder: replace # with Cognito form embed later -->
+    <!-- TODO: Replace this with your Cognito embed script -->
     <a href="#" class="btn">Register Now</a>
   </section>
 
