--- a/index.html
+++ b/index.html
@@ -8,77 +8,92 @@
     body {
       margin: 0;
       font-family: "Segoe UI", Arial, sans-serif;
-      background: #f9f9f9;
+      background: #f5f7fa;
       color: #333;
       line-height: 1.6;
     }
-    header {
-      background: linear-gradient(135deg, #003366, #0066cc);
-      color: white;
+
+    /* Logo Section */
+    .logo-container {
       text-align: center;
-      padding: 3rem 1rem;
+      padding: 2rem 1rem 1rem 1rem;
     }
-    header h1 {
-      margin: 0;
-      font-size: 2.8rem;
+    .logo-container img {
+      max-width: 220px;
+      border-radius: 12px;
     }
-    header p {
-      font-size: 1.2rem;
-      margin-top: 0.5rem;
-      color: #ddd;
-    }
+
+    /* Navigation Tabs */
     nav {
-      background: #222;
-      padding: 0.75rem;
+      background: white;
+      border-radius: 30px;
+      padding: 0.75rem 1rem;
+      max-width: 700px;
+      margin: 0 auto 2rem auto;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.08);
       text-align: center;
     }
     nav a {
-      color: white;
+      color: #333;
       margin: 0 1rem;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
+      font-size: 1rem;
+      transition: color 0.3s ease;
     }
     nav a:hover {
-      color: #00bfff;
+      color: #4a90e2;
     }
+
+    /* Section Cards */
     section {
       max-width: 1000px;
       margin: 2rem auto;
-      padding: 0 1rem;
+      padding: 2rem;
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
     }
     h2 {
-      border-bottom: 2px solid #eee;
-      padding-bottom: 0.5rem;
-      margin-bottom: 1rem;
-      color: #003366;
+      margin-top: 0;
+      color: #4a90e2;
     }
+
+    /* Button Style */
     .btn {
       display: inline-block;
       padding: 0.75rem 1.5rem;
-      background: #0066cc;
+      background: linear-gradient(135deg, #50c9c3, #4a90e2);
       color: white;
       text-decoration: none;
-      border-radius: 5px;
+      border-radius: 30px;
       font-weight: bold;
+      transition: all 0.3s ease;
     }
     .btn:hover {
-      background: #004999;
+      opacity: 0.9;
+      transform: translateY(-2px);
     }
+
+    /* Footer */
     footer {
-      background: #003366;
+      background: #4a90e2;
       color: white;
       text-align: center;
-      padding: 1rem;
+      padding: 1.5rem;
+      border-top-left-radius: 40px;
+      border-top-right-radius: 40px;
       margin-top: 3rem;
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Eleos Conference 2026</h1>
-    <p>Faith • Leadership • Renewal</p>
-  </header>
+  <!-- Logo at the Top -->
+  <div class="logo-container">
+    <img src="Eleos.jpg" alt="Eleos Conference 2026 Logo">
+  </div>
 
+  <!-- Curvy Navigation Tabs -->
   <nav>
     <a href="#about">About</a>
     <a href="#schedule">Schedule</a>
@@ -86,6 +101,7 @@
     <a href="#register">Register</a>
   </nav>
 
+  <!-- Sections -->
   <section id="about">
     <h2>About</h2>
     <p>
@@ -116,13 +132,13 @@
     <p>
       Tickets are $20 per person. Reserve your spot today and be part of Eleos Conference 2026.
     </p>
-    <!-- TODO: Replace this with your Cognito embed script -->
+    <!-- TODO: Replace this with Cognito form embed -->
     <a href="#" class="btn">Register Now</a>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
   </footer>
 </body>
 </html>
-
