--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     }
     .logo-container img {
       max-width: 220px;
-      border-radius: 12px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
     }
 
     /* Navigation Tabs */
