--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
       line-height: 1.6;
     }
 
-    /* Logo Section */
+    /* Logo / Header Section */
     .logo-container {
+      background: linear-gradient(135deg, #4a90e2, #50c9c3);
       text-align: center;
-      padding: 2rem 1rem 1rem 1rem;
+      padding: 3rem 1rem;
+      border-bottom-left-radius: 50px;
+      border-bottom-right-radius: 50px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     }
     .logo-container img {
-      max-width: 220px;
+      width: 80%;
+      max-width: 600px; /* large on desktop */
       height: auto;
       display: block;
       margin: 0 auto;
@@ -28,19 +33,19 @@
     /* Navigation Tabs */
     nav {
       background: white;
-      border-radius: 30px;
-      padding: 0.75rem 1rem;
-      max-width: 700px;
-      margin: 0 auto 2rem auto;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.08);
+      border-radius: 40px;
+      padding: 1rem;
+      max-width: 800px;
+      margin: -2rem auto 2rem auto; /* overlap effect */
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       text-align: center;
     }
     nav a {
       color: #333;
-      margin: 0 1rem;
+      margin: 0 1.5rem;
       text-decoration: none;
       font-weight: 600;
-      font-size: 1rem;
+      font-size: 1.1rem;
       transition: color 0.3s ease;
     }
     nav a:hover {
@@ -51,30 +56,32 @@
     section {
       max-width: 1000px;
       margin: 2rem auto;
-      padding: 2rem;
+      padding: 2.5rem;
       background: white;
-      border-radius: 20px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+      border-radius: 25px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
     }
     h2 {
       margin-top: 0;
       color: #4a90e2;
+      font-size: 1.8rem;
     }
 
     /* Button Style */
     .btn {
       display: inline-block;
-      padding: 0.75rem 1.5rem;
+      padding: 1rem 2rem;
       background: linear-gradient(135deg, #50c9c3, #4a90e2);
       color: white;
       text-decoration: none;
-      border-radius: 30px;
+      border-radius: 40px;
       font-weight: bold;
+      font-size: 1.1rem;
       transition: all 0.3s ease;
     }
     .btn:hover {
       opacity: 0.9;
-      transform: translateY(-2px);
+      transform: translateY(-3px);
     }
 
     /* Footer */
@@ -82,10 +89,11 @@
       background: #4a90e2;
       color: white;
       text-align: center;
-      padding: 1.5rem;
-      border-top-left-radius: 40px;
-      border-top-right-radius: 40px;
-      margin-top: 3rem;
+      padding: 2rem;
+      border-top-left-radius: 50px;
+      border-top-right-radius: 50px;
+      margin-top: 4rem;
+      font-size: 0.95rem;
     }
   </style>
 </head>
@@ -144,5 +152,6 @@
   </footer>
 </body>
 </html>
+
 
 
