--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
       box-shadow: 0 4px 15px rgba(0,0,0,0.1);
     }
     .logo-container img {
-      width: 80%;
-      max-width: 600px; /* large on desktop */
+      width: 70%;
+      max-width: 450px;
       height: auto;
       display: block;
       margin: 0 auto;
+      border-radius: 30px; /* rounded edges */
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15); /* depth */
+      background: white; /* trims out heavy white areas */
+      padding: 10px; /* shrinks visible whitespace */
     }
 
     /* Navigation Tabs */
@@ -152,6 +156,3 @@
   </footer>
 </body>
 </html>
-
-
-
