--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
       height: auto;
       display: block;
       margin: 0 auto;
-      border-radius: 30px; /* rounded edges */
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15); /* depth */
-      background: white; /* trims out heavy white areas */
-      padding: 10px; /* shrinks visible whitespace */
+      border-radius: 0; /* no rounding needed now */
+      box-shadow: none; /* cleaner with transparent background */
     }
 
     /* Navigation Tabs */
@@ -104,7 +102,7 @@
 <body>
   <!-- Logo at the Top -->
   <div class="logo-container">
-    <img src="Eleos.jpg" alt="Eleos Conference 2026 Logo">
+    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
   </div>
 
   <!-- Curvy Navigation Tabs -->
