--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     /* Logo / Header Section */
     .logo-container {
-      background: linear-gradient(135deg, #4a90e2, #50c9c3);
+      background: linear-gradient(135deg, #f9f9f9, #e6e6e6);
       text-align: center;
       padding: 3rem 1rem;
       border-bottom-left-radius: 50px;
       border-bottom-right-radius: 50px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
     }
     .logo-container img {
       width: 70%;
@@ -28,8 +28,8 @@
       height: auto;
       display: block;
       margin: 0 auto;
-      border-radius: 0; /* no rounding needed now */
-      box-shadow: none; /* cleaner with transparent background */
+      border-radius: 0;
+      box-shadow: none;
     }
 
     /* Navigation Tabs */
@@ -38,7 +38,7 @@
       border-radius: 40px;
       padding: 1rem;
       max-width: 800px;
-      margin: -2rem auto 2rem auto; /* overlap effect */
+      margin: -2rem auto 2rem auto;
       box-shadow: 0 4px 12px rgba(0,0,0,0.1);
       text-align: center;
     }
@@ -51,7 +51,7 @@
       transition: color 0.3s ease;
     }
     nav a:hover {
-      color: #4a90e2;
+      color: #666;
     }
 
     /* Section Cards */
@@ -65,7 +65,7 @@
     }
     h2 {
       margin-top: 0;
-      color: #4a90e2;
+      color: #333;
       font-size: 1.8rem;
     }
 
@@ -73,7 +73,7 @@
     .btn {
       display: inline-block;
       padding: 1rem 2rem;
-      background: linear-gradient(135deg, #50c9c3, #4a90e2);
+      background: linear-gradient(135deg, #444, #222);
       color: white;
       text-decoration: none;
       border-radius: 40px;
@@ -88,7 +88,7 @@
 
     /* Footer */
     footer {
-      background: #4a90e2;
+      background: #333;
       color: white;
       text-align: center;
       padding: 2rem;
