--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     body {
       margin: 0;
       font-family: "Segoe UI", Arial, sans-serif;
-      background: #f5f7fa;
-      color: #333;
+      background: #f2f2f2; /* light gray background */
+      color: #333; /* softer than black */
       line-height: 1.6;
     }
 
     /* Logo / Header Section */
     .logo-container {
-      background: linear-gradient(135deg, #f9f9f9, #e6e6e6);
+      background: #ffffff; /* clean white header */
       text-align: center;
       padding: 3rem 1rem;
       border-bottom-left-radius: 50px;
       border-bottom-right-radius: 50px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
     }
     .logo-container img {
       width: 70%;
@@ -28,22 +28,20 @@
       height: auto;
       display: block;
       margin: 0 auto;
-      border-radius: 0;
-      box-shadow: none;
     }
 
     /* Navigation Tabs */
     nav {
-      background: white;
+      background: #e9e9e9; /* dull gray tabs */
       border-radius: 40px;
       padding: 1rem;
       max-width: 800px;
       margin: -2rem auto 2rem auto;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
       text-align: center;
     }
     nav a {
-      color: #333;
+      color: #444; /* softer dark gray */
       margin: 0 1.5rem;
       text-decoration: none;
       font-weight: 600;
@@ -51,7 +49,7 @@
       transition: color 0.3s ease;
     }
     nav a:hover {
-      color: #666;
+      color: #000; /* stronger contrast on hover */
     }
 
     /* Section Cards */
@@ -59,13 +57,13 @@
       max-width: 1000px;
       margin: 2rem auto;
       padding: 2.5rem;
-      background: white;
-      border-radius: 25px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      background: #ffffff; /* white cards */
+      border-radius: 20px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
     }
     h2 {
       margin-top: 0;
-      color: #333;
+      color: #444; /* dull gray headers */
       font-size: 1.8rem;
     }
 
@@ -73,7 +71,7 @@
     .btn {
       display: inline-block;
       padding: 1rem 2rem;
-      background: linear-gradient(135deg, #444, #222);
+      background: #555; /* muted gray button */
       color: white;
       text-decoration: none;
       border-radius: 40px;
@@ -82,13 +80,13 @@
       transition: all 0.3s ease;
     }
     .btn:hover {
-      opacity: 0.9;
+      background: #333; /* darker hover */
       transform: translateY(-3px);
     }
 
     /* Footer */
     footer {
-      background: #333;
+      background: #444; /* dark dull gray */
       color: white;
       text-align: center;
       padding: 2rem;
