--- a/index.html
+++ b/index.html
@@ -4,149 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eleos Conference 2026</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: "Segoe UI", Arial, sans-serif;
-      background: #f2f2f2; /* light gray background */
-      color: #333; /* softer than black */
-      line-height: 1.6;
-    }
-
-    /* Logo / Header Section */
-    .logo-container {
-      background: #ffffff; /* clean white header */
-      text-align: center;
-      padding: 3rem 1rem;
-      border-bottom-left-radius: 50px;
-      border-bottom-right-radius: 50px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-    .logo-container img {
-      width: 70%;
-      max-width: 450px;
-      height: auto;
-      display: block;
-      margin: 0 auto;
-    }
-
-    /* Navigation Tabs */
-    nav {
-      background: #e9e9e9; /* dull gray tabs */
-      border-radius: 40px;
-      padding: 1rem;
-      max-width: 800px;
-      margin: -2rem auto 2rem auto;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.08);
-      text-align: center;
-    }
-    nav a {
-      color: #444; /* softer dark gray */
-      margin: 0 1.5rem;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 1.1rem;
-      transition: color 0.3s ease;
-    }
-    nav a:hover {
-      color: #000; /* stronger contrast on hover */
-    }
-
-    /* Section Cards */
-    section {
-      max-width: 1000px;
-      margin: 2rem auto;
-      padding: 2.5rem;
-      background: #ffffff; /* white cards */
-      border-radius: 20px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
-    }
-    h2 {
-      margin-top: 0;
-      color: #444; /* dull gray headers */
-      font-size: 1.8rem;
-    }
-
-    /* Button Style */
-    .btn {
-      display: inline-block;
-      padding: 1rem 2rem;
-      background: #555; /* muted gray button */
-      color: white;
-      text-decoration: none;
-      border-radius: 40px;
-      font-weight: bold;
-      font-size: 1.1rem;
-      transition: all 0.3s ease;
-    }
-    .btn:hover {
-      background: #333; /* darker hover */
-      transform: translateY(-3px);
-    }
-
-    /* Footer */
-    footer {
-      background: #444; /* dark dull gray */
-      color: white;
-      text-align: center;
-      padding: 2rem;
-      border-top-left-radius: 50px;
-      border-top-right-radius: 50px;
-      margin-top: 4rem;
-      font-size: 0.95rem;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Logo at the Top -->
   <div class="logo-container">
     <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
   </div>
 
-  <!-- Curvy Navigation Tabs -->
   <nav>
-    <a href="#about">About</a>
-    <a href="#schedule">Schedule</a>
-    <a href="#speakers">Speakers</a>
-    <a href="#register">Register</a>
+    <a href="index.html">Home</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="speakers.html">Speakers</a>
+    <a href="register.html">Register</a>
   </nav>
 
-  <!-- Sections -->
-  <section id="about">
-    <h2>About</h2>
+  <section>
+    <h2>Welcome to Eleos Conference 2026</h2>
     <p>
-      Eleos Conference 2026 is a gathering of leaders, teachers, and disciples dedicated
-      to exploring the Word of God, strengthening the Church, and equipping believers
-      for ministry. Join us for a time of worship, teaching, and fellowship.
+      Eleos Conference 2026 is a gathering for pastors, church leaders, and believers
+      who desire to grow deeper in faith, strengthen fellowship, and equip the church
+      for the future.
+    </p>
+    <p>
+      📍 Location: Walnut Grove Baptist Church, Bolivar, Tennessee <br>
+      📅 Dates: June 12–14, 2026
+    </p>
+    <p>
+      We invite you to join us for worship, preaching, fellowship, and encouragement
+      as we seek to build up the body of Christ together.
     </p>
   </section>
 
-  <section id="schedule">
-    <h2>Schedule</h2>
-    <p>
-      The conference will take place in 2026. A detailed schedule of sessions, workshops,
-      and keynote speakers will be released soon.
-    </p>
-  </section>
-
-  <section id="speakers">
-    <h2>Speakers</h2>
-    <p>
-      Our lineup of keynote speakers and teachers will be announced in the coming months.
-      Stay tuned!
-    </p>
-  </section>
-
-  <section id="register">
-    <h2>Register</h2>
-    <p>
-      Tickets are $20 per person. Reserve your spot today and be part of Eleos Conference 2026.
-    </p>
-    <!-- TODO: Replace this with Cognito form embed -->
-    <a href="#" class="btn">Register Now</a>
-  </section>
-
-  <!-- Footer -->
   <footer>
     <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
   </footer>
