--- a/schedule.html
+++ b/schedule.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Schedule | Eleos Conference 2026</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="logo-container">
+    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
+  </div>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="speakers.html">Speakers</a>
+    <a href="register.html">Register</a>
+  </nav>
+
+  <section>
+    <h2>Schedule</h2>
+    <p>The full schedule of sessions, workshops, and services will be released soon.</p>
+    <p>Please check back here for updates as the event approaches.</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
+  </footer>
+</body>
+</html>
 
