--- a/speakers.html
+++ b/speakers.html
@@ -1,1 +1,56 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Speakers | Eleos Conference 2026</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="logo-container">
+    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
+  </div>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="speakers.html">Speakers</a>
+    <a href="register.html">Register</a>
+  </nav>
+
+  <section>
+    <h2>Speakers</h2>
+    <ul class="speakers-list">
+      <li>
+        <span class="speaker-name">Dr. Adam Rimmer</span>
+        <span class="speaker-church">Walnut Grove Baptist Church</span>
+      </li>
+      <li>
+        <span class="speaker-name">Tommy Warner</span>
+        <span class="speaker-church">Hardeman County Baptist Association Missionary</span>
+      </li>
+      <li>
+        <span class="speaker-name">Dr. Adam Barnhart</span>
+        <span class="speaker-church">Freedom Hope Church</span>
+      </li>
+      <li>
+        <span class="speaker-name">Matt Boatwright</span>
+        <span class="speaker-church">Parrans Chapel Baptist Church</span>
+      </li>
+      <li>
+        <span class="speaker-name">Dr. Rusty Keltner</span>
+        <span class="speaker-church">Porters Creek Baptist Church</span>
+      </li>
+      <li>
+        <span class="speaker-name">Kyle Rhea</span>
+        <span class="speaker-church">First Baptist Church of Bolivar</span>
+      </li>
+    </ul>
+  </section>
+
+  <footer>
+    <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
+  </footer>
+</body>
+</html>
 
