--- a/register.html
+++ b/register.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Register | Eleos Conference 2026</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div class="logo-container">
+    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
+  </div>
+
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="schedule.html">Schedule</a>
+    <a href="speakers.html">Speakers</a>
+    <a href="register.html">Register</a>
+  </nav>
+
+  <section>
+    <h2>Register</h2>
+    <p>Tickets are $20 per person. Reserve your spot today and join us for Eleos Conference 2026.</p>
+    <!-- TODO: Replace this link with your Cognito embed -->
+    <a href="#" class="btn">Register Now</a>
+  </section>
+
+  <footer>
+    <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
+  </footer>
+</body>
+</html>
 
