--- a/speakers.html
+++ b/speakers.html
@@ -20,32 +20,55 @@
 
   <section>
     <h2>Speakers</h2>
-    <ul class="speakers-list">
-      <li>
+
+    <div class="speaker-item">
+      <img src="https://via.placeholder.com/60" alt="Dr. Adam Rimmer" class="speaker-photo">
+      <div>
         <span class="speaker-name">Dr. Adam Rimmer</span>
         <span class="speaker-church">Walnut Grove Baptist Church</span>
-      </li>
-      <li>
+      </div>
+    </div>
+
+    <div class="speaker-item">
+      <img src="https://via.placeholder.com/60" alt="Tommy Warner" class="speaker-photo">
+      <div>
         <span class="speaker-name">Tommy Warner</span>
         <span class="speaker-church">Hardeman County Baptist Association Missionary</span>
-      </li>
-      <li>
+      </div>
+    </div>
+
+    <div class="speaker-item">
+      <img src="https://via.placeholder.com/60" alt="Dr. Adam Barnhart" class="speaker-photo">
+      <div>
         <span class="speaker-name">Dr. Adam Barnhart</span>
         <span class="speaker-church">Freedom Hope Church</span>
-      </li>
-      <li>
+      </div>
+    </div>
+
+    <div class="speaker-item">
+      <img src="https://via.placeholder.com/60" alt="Matt Boatwright" class="speaker-photo">
+      <div>
         <span class="speaker-name">Matt Boatwright</span>
         <span class="speaker-church">Parrans Chapel Baptist Church</span>
-      </li>
-      <li>
+      </div>
+    </div>
+
+    <div class="speaker-item">
+      <img src="https://via.placeholder.com/60" alt="Dr. Rusty Keltner" class="speaker-photo">
+      <div>
         <span class="speaker-name">Dr. Rusty Keltner</span>
         <span class="speaker-church">Porters Creek Baptist Church</span>
-      </li>
-      <li>
+      </div>
+    </div>
+
+    <div class="speaker-item">
+      <img src="https://via.placeholder.com/60" alt="Kyle Rhea" class="speaker-photo">
+      <div>
         <span class="speaker-name">Kyle Rhea</span>
         <span class="speaker-church">First Baptist Church of Bolivar</span>
-      </li>
-    </ul>
+      </div>
+    </div>
+
   </section>
 
   <footer>
@@ -53,4 +76,3 @@
   </footer>
 </body>
 </html>
-
