--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       for the future.
     </p>
     <p>
-      📍 Location: Walnut Grove Baptist Church, Bolivar, Tennessee <br>
+      📍 Location: First Baptist Church of Bolivar, Tennessee <br>
       📅 Dates: June 12–14, 2026
     </p>
     <p>
