--- a/speakers.html
+++ b/speakers.html
@@ -69,6 +69,14 @@
       </div>
     </div>
 
+    <div class="speaker-item">
+      <img src="https://via.placeholder.com/60" alt="Dr. Alfonso Gilbert" class="speaker-photo">
+      <div>
+        <span class="speaker-name">Dr. Alfonso Gilbert</span>
+        <span class="speaker-church">[Church/Ministry TBD]</span>
+      </div>
+    </div>
+
   </section>
 
   <footer>
