--- a/schedule.html
+++ b/schedule.html
@@ -19,9 +19,73 @@
   </nav>
 
   <section>
-    <h2>Schedule</h2>
-    <p>The full schedule of sessions, workshops, and services will be released soon.</p>
-    <p>Please check back here for updates as the event approaches.</p>
+    <h2>Saturday Schedule</h2>
+    <table class="schedule-table">
+      <thead>
+        <tr>
+          <th>Time</th>
+          <th>Speaker</th>
+          <th>Topic</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="Time">9:00am - 10:00am</td>
+          <td data-label="Speaker">Tommy Warner</td>
+          <td data-label="Topic">Suffering - 6 Lessons</td>
+        </tr>
+        <tr>
+          <td data-label="Time">10:00am - 10:15am</td>
+          <td data-label="Speaker">Break</td>
+          <td data-label="Topic"></td>
+        </tr>
+        <tr>
+          <td data-label="Time">10:15am - 11:15am</td>
+          <td data-label="Speaker">Adam Rimmer</td>
+          <td data-label="Topic">Healing from Grief, Loss, and Tragedy</td>
+        </tr>
+        <tr>
+          <td data-label="Time">11:30am - 12:30pm</td>
+          <td data-label="Speaker">Alfonso Gilbert</td>
+          <td data-label="Topic">Nature of Trauma - Steps to Recovery</td>
+        </tr>
+        <tr>
+          <td data-label="Time">12:30pm - 1:15pm</td>
+          <td data-label="Speaker">Lunch / Breakout Group 1</td>
+          <td data-label="Topic">Tommy Warner, Adam Rimmer, Alfonso Gilbert — Trauma and Attachment Theory</td>
+        </tr>
+        <tr>
+          <td data-label="Time">1:15pm - 2:15pm</td>
+          <td data-label="Speaker">Kyle Rhea</td>
+          <td data-label="Topic"></td>
+        </tr>
+        <tr>
+          <td data-label="Time">2:15pm - 3:15pm</td>
+          <td data-label="Speaker">Rusty Keltner</td>
+          <td data-label="Topic">Mad at God — Biblical Lament</td>
+        </tr>
+        <tr>
+          <td data-label="Time">3:15pm - 3:30pm</td>
+          <td data-label="Speaker">Break</td>
+          <td data-label="Topic"></td>
+        </tr>
+        <tr>
+          <td data-label="Time">3:30pm - 4:30pm</td>
+          <td data-label="Speaker">Breakout Group 2</td>
+          <td data-label="Topic">Kyle Rhea, Rusty Keltner — When God is Silent, Adam Barnhart</td>
+        </tr>
+        <tr>
+          <td data-label="Time">4:30pm - 5:30pm</td>
+          <td data-label="Speaker">Dinner / Final Panel / Dismissal</td>
+          <td data-label="Topic"></td>
+        </tr>
+        <tr>
+          <td data-label="Time">5:30pm - 7:00pm</td>
+          <td data-label="Speaker">Adam Barnhart</td>
+          <td data-label="Topic">Do you want to be Well?</td>
+        </tr>
+      </tbody>
+    </table>
   </section>
 
   <footer>
