--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </p>
     <p>
       📍 Location: First Baptist Church of Bolivar, Tennessee <br>
-      📅 Dates: June 12–14, 2026
+      📅 Dates: January 2nd - 3rd 2026
     </p>
     <p>
       We invite you to join us for worship, preaching, fellowship, and encouragement
@@ -40,3 +40,4 @@
   </footer>
 </body>
 </html>
+
