--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="logo-container">
-    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
-  </div>
+  <!-- Hero Section -->
+  <header class="hero">
+    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo" class="hero-logo">
+    <h1>Eleos Conference 2026</h1>
+    <p class="hero-subtitle">January 2–3, 2026 • First Baptist Church of Bolivar</p>
+    <a href="register.html" class="btn">Register Now</a>
+  </header>
 
+  <!-- Navigation -->
   <nav>
     <a href="index.html">Home</a>
     <a href="schedule.html">Schedule</a>
@@ -18,20 +23,29 @@
     <a href="register.html">Register</a>
   </nav>
 
+  <!-- Info Cards -->
+  <section class="info-cards">
+    <div class="card">
+      <h3>📍 Location</h3>
+      <p>First Baptist Church of Bolivar, Tennessee</p>
+    </div>
+    <div class="card">
+      <h3>📅 Dates</h3>
+      <p>January 2–3, 2026</p>
+    </div>
+    <div class="card">
+      <h3>🎶 Theme</h3>
+      <p>Building Faith, Equipping Leaders, Strengthening the Church</p>
+    </div>
+  </section>
+
+  <!-- About Section -->
   <section>
-    <h2>Welcome to Eleos Conference 2026</h2>
+    <h2>What is Eleos?</h2>
     <p>
       Eleos Conference 2026 is a gathering for pastors, church leaders, and believers
       who desire to grow deeper in faith, strengthen fellowship, and equip the church
-      for the future.
-    </p>
-    <p>
-      📍 Location: First Baptist Church of Bolivar, Tennessee <br>
-      📅 Dates: January 2nd - 3rd 2026
-    </p>
-    <p>
-      We invite you to join us for worship, preaching, fellowship, and encouragement
-      as we seek to build up the body of Christ together.
+      for the future. Join us for worship, preaching, fellowship, and encouragement.
     </p>
   </section>
 
@@ -40,4 +54,3 @@
   </footer>
 </body>
 </html>
-
