--- a/index.html
+++ b/index.html
@@ -4,53 +4,74 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eleos Conference 2026</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      color: #333;
+    }
+    header {
+      background: #fff;
+      text-align: center;
+      padding: 20px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .logo-container img {
+      max-width: 250px;
+      height: auto;
+    }
+    nav {
+      margin-top: 15px;
+    }
+    nav a {
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #333;
+    }
+    nav a:hover {
+      color: #555;
+    }
+    main {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    h1, h2 {
+      text-align: center;
+      color: #222;
+    }
+    p {
+      line-height: 1.6;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
-  <!-- Hero Section -->
-  <header class="hero">
-    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo" class="hero-logo">
-    <h1>Eleos Conference 2026</h1>
-    <p class="hero-subtitle">January 2–3, 2026 • First Baptist Church of Bolivar</p>
-    <a href="register.html" class="btn">Register Now</a>
+  <header>
+    <div class="logo-container">
+      <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="speakers.html">Speakers</a>
+      <a href="register.html">Register</a>
+    </nav>
   </header>
 
-  <!-- Navigation -->
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="speakers.html">Speakers</a>
-    <a href="register.html">Register</a>
-  </nav>
-
-  <!-- Info Cards -->
-  <section class="info-cards">
-    <div class="card">
-      <h3>📍 Location</h3>
-      <p>First Baptist Church of Bolivar, Tennessee</p>
-    </div>
-    <div class="card">
-      <h3>📅 Dates</h3>
-      <p>January 2–3, 2026</p>
-    </div>
-    <div class="card">
-      <h3>🎶 Theme</h3>
-      <p>Building Faith, Equipping Leaders, Strengthening the Church</p>
-    </div>
-  </section>
-
-  <!-- About Section -->
-  <section>
-    <h2>What is Eleos?</h2>
+  <main>
+    <h1>Welcome to Eleos Conference 2026</h1>
     <p>
-      Eleos Conference 2026 is a gathering for pastors, church leaders, and believers
-      who desire to grow deeper in faith, strengthen fellowship, and equip the church
-      for the future. Join us for worship, preaching, fellowship, and encouragement.
+      Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.  
     </p>
-  </section>
-
-  <footer>
-    <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
-  </footer>
+    <h2>Conference Details</h2>
+    <p><strong>Date:</strong> January 2–3, 2026</p>
+    <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
+  </main>
 </body>
 </html>
