--- a/schedule.html
+++ b/schedule.html
@@ -99,4 +99,96 @@
   </header>
 
   <main>
-    <h2>Friday Schedule</h2
+    <h2>Friday Schedule</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Time</th>
+          <th>Speaker</th>
+          <th>Topic</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="Time">5:30pm - 6:30pm</td>
+          <td data-label="Speaker">Registration Begins</td>
+          <td data-label="Topic">Registration and Sign-in Begins</td>
+        </tr>
+        <tr>
+          <td data-label="Time">6:30pm - 6:40pm</td>
+          <td data-label="Speaker">Adam Rimmer</td>
+          <td data-label="Topic">Welcome</td>
+        </tr>
+        <tr>
+          <td data-label="Time">6:40pm - 7:40pm</td>
+          <td data-label="Speaker">Matt Boatwright</td>
+          <td data-label="Topic">Opening — Do you want to be well?</td>
+        </tr>
+        <tr>
+          <td data-label="Time">7:40pm - 8:15pm</td>
+          <td data-label="Speaker">Preliminary Panel</td>
+          <td data-label="Topic">Questions</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <h2>Saturday Schedule</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Time</th>
+          <th>Speaker</th>
+          <th>Topic</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td data-label="Time">9:00am - 10:00am</td>
+          <td data-label="Speaker">Tommy Warner</td>
+          <td data-label="Topic">Suffering — 6 Lessons</td>
+        </tr>
+        <tr>
+          <td data-label="Time">10:15am - 11:15am</td>
+          <td data-label="Speaker">Adam Rimmer</td>
+          <td data-label="Topic">Healing from Grief, Loss, and Tragedy</td>
+        </tr>
+        <tr>
+          <td data-label="Time">11:30am - 12:30pm</td>
+          <td data-label="Speaker">Alfonso Gilbert</td>
+          <td data-label="Topic">Nature of Trauma — Steps to Recovery</td>
+        </tr>
+        <tr>
+          <td data-label="Time">12:30pm - 1:15pm</td>
+          <td data-label="Speaker">Lunch / Breakout Group 1</td>
+          <td data-label="Topic">Tommy Warner, Adam Rimmer, Alfonso Gilbert — Trauma and Attachment Theory</td>
+        </tr>
+        <tr>
+          <td data-label="Time">1:15pm - 2:15pm</td>
+          <td data-label="Speaker">Kyle Rhea</td>
+          <td data-label="Topic"></td>
+        </tr>
+        <tr>
+          <td data-label="Time">2:30pm - 3:30pm</td>
+          <td data-label="Speaker">Rusty Keltner</td>
+          <td data-label="Topic">Mad at God — Biblical Lament</td>
+        </tr>
+        <tr>
+          <td data-label="Time">3:40pm - 4:30pm</td>
+          <td data-label="Speaker">Breakout Group 2</td>
+          <td data-label="Topic">Kyle Rhea, Rusty Keltner, Adam Barnhart — When God is Silent</td>
+        </tr>
+        <tr>
+          <td data-label="Time">4:30pm - 5:30pm</td>
+          <td data-label="Speaker">Dinner / Panel Discussion</td>
+          <td data-label="Topic">Questions</td>
+        </tr>
+        <tr>
+          <td data-label="Time">5:30pm - 7:00pm</td>
+          <td data-label="Speaker">Adam Barnhart</td>
+          <td data-label="Topic">Do you want to be Well?</td>
+        </tr>
+      </tbody>
+    </table>
+  </main>
+</body>
+</html>
