--- a/index.html
+++ b/index.html
@@ -4,52 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eleos Conference 2026</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background: #f7f7f7;
-      color: #333;
-    }
-    header {
-      background: #fff;
-      text-align: center;
-      padding: 20px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .logo-container img {
-      max-width: 250px;
-      height: auto;
-    }
-    nav {
-      margin-top: 15px;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #333;
-    }
-    nav a:hover {
-      color: #555;
-    }
-    main {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
-    h1, h2 {
-      text-align: center;
-      color: #222;
-    }
-    p {
-      line-height: 1.6;
-      text-align: center;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -73,5 +28,9 @@
     <p><strong>Date:</strong> January 2–3, 2026</p>
     <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
   </main>
+
+  <footer>
+    <p>&copy; 2026 Eleos Conference. All rights reserved.</p>
+  </footer>
 </body>
 </html>
