--- a/schedule.html
+++ b/schedule.html
@@ -4,86 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Schedule - Eleos Conference 2026</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f7f7f7;
-      margin: 0;
-      padding: 0;
-      color: #333;
-    }
-    header {
-      background: white;
-      text-align: center;
-      padding: 20px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    }
-    .logo-container img {
-      max-width: 250px;
-      height: auto;
-      margin-bottom: 10px;
-    }
-    nav a {
-      margin: 0 15px;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
-    nav a:hover {
-      color: #555;
-    }
-    main {
-      padding: 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    h2 {
-      margin-top: 40px;
-      text-align: center;
-      color: #333;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin: 20px 0;
-      background: white;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
-    th, td {
-      border: 1px solid #ddd;
-      padding: 12px;
-      text-align: left;
-    }
-    th {
-      background: #eee;
-      font-weight: bold;
-    }
-    tr:nth-child(even) {
-      background: #fafafa;
-    }
-    @media (max-width: 768px) {
-      table, thead, tbody, th, td, tr {
-        display: block;
-      }
-      th {
-        display: none;
-      }
-      td {
-        border: none;
-        padding: 10px;
-        position: relative;
-      }
-      td::before {
-        content: attr(data-label);
-        font-weight: bold;
-        display: block;
-        margin-bottom: 5px;
-        color: #555;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -100,7 +21,7 @@
 
   <main>
     <h2>Friday Schedule</h2>
-    <table>
+    <table class="schedule-table">
       <thead>
         <tr>
           <th>Time</th>
@@ -133,7 +54,7 @@
     </table>
 
     <h2>Saturday Schedule</h2>
-    <table>
+    <table class="schedule-table">
       <thead>
         <tr>
           <th>Time</th>
@@ -190,5 +111,9 @@
       </tbody>
     </table>
   </main>
+
+  <footer>
+    <p>&copy; 2026 Eleos Conference. All rights reserved.</p>
+  </footer>
 </body>
 </html>
