--- a/index.html
+++ b/index.html
@@ -20,13 +20,15 @@
   </header>
 
   <main>
-    <h1>Welcome to Eleos Conference 2026</h1>
-    <p>
-      Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.  
-    </p>
-    <h2>Conference Details</h2>
-    <p><strong>Date:</strong> January 2–3, 2026</p>
-    <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
+    <section class="card">
+      <h1>Welcome to Eleos Conference 2026</h1>
+      <p>
+        Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.  
+      </p>
+      <h2>Conference Details</h2>
+      <p><strong>Date:</strong> January 2–3, 2026</p>
+      <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
+    </section>
   </main>
 
   <footer>
