--- a/index.html
+++ b/index.html
@@ -19,20 +19,29 @@
     </nav>
   </header>
 
-  <main>
-    <section class="card">
-      <h1>Welcome to Eleos Conference 2026</h1>
-      <p>
-        Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.  
-      </p>
-      <h2>Conference Details</h2>
-      <p><strong>Date:</strong> January 2–3, 2026</p>
-      <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
-    </section>
-  </main>
+<main class="with-sidebars">
+  <aside class="sidebar left">
+    <p>"The Lord is near to the brokenhearted and saves the crushed in spirit." <br><em>Psalm 34:18</em></p>
+  </aside>
+
+  <section class="card">
+    <h1>Welcome to Eleos Conference 2026</h1>
+    <p>
+      Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.  
+    </p>
+    <h2>Conference Details</h2>
+    <p><strong>Date:</strong> January 2–3, 2026</p>
+    <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
+  </section>
+
+  <aside class="sidebar right">
+    <p>"Come to me, all who labor and are heavy laden, and I will give you rest." <br><em>Matthew 11:28</em></p>
+  </aside>
+</main>
 
   <footer>
     <p>&copy; 2026 Eleos Conference. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
