--- a/index.html
+++ b/index.html
@@ -19,29 +19,35 @@
     </nav>
   </header>
 
-<main class="with-sidebars">
-  <aside class="sidebar left">
-    <p>"The Lord is near to the brokenhearted and saves the crushed in spirit." <br><em>Psalm 34:18</em></p>
-  </aside>
+  <main class="with-sidebars">
+    <aside class="sidebar left">
+      <p>
+        "When Jesus saw him lying there, and knew that he had already been a long time in that condition, 
+        He said to him, <strong>‘Do you want to be well?’</strong>"  
+        <br><em>John 5:6 NASB</em>
+      </p>
+    </aside>
 
-  <section class="card">
-    <h1>Welcome to Eleos Conference 2026</h1>
-    <p>
-      Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.  
-    </p>
-    <h2>Conference Details</h2>
-    <p><strong>Date:</strong> January 2–3, 2026</p>
-    <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
-  </section>
+    <section class="card">
+      <h1>Welcome to Eleos Conference 2026</h1>
+      <p>
+        Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, 
+        strengthening the Church, and equipping believers for ministry.  
+      </p>
+      <h2>Conference Details</h2>
+      <p><strong>Date:</strong> January 2–3, 2026</p>
+      <p><strong>Location:</strong> First Baptist Church of Bolivar</p>
+    </section>
 
-  <aside class="sidebar right">
-    <p>"Come to me, all who labor and are heavy laden, and I will give you rest." <br><em>Matthew 11:28</em></p>
-  </aside>
-</main>
+    <aside class="sidebar right">
+      <p><strong>"Do you want to be well?"</strong></p>
+    </aside>
+  </main>
 
   <footer>
     <p>&copy; 2026 Eleos Conference. All rights reserved.</p>
   </footer>
 </body>
 </html>
+
 
