--- a/speakers.html
+++ b/speakers.html
@@ -3,84 +3,121 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Speakers | Eleos Conference 2026</title>
+  <title>Speakers - Eleos Conference 2026</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Speaker cards */
+    .speakers-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 2rem;
+      max-width: 1200px;
+      margin: 2rem auto;
+      padding: 1rem;
+    }
+
+    .speaker-card {
+      background: #fff;
+      border-radius: 20px;
+      padding: 1.5rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
+    .speaker-card img {
+      width: 150px;
+      height: 150px;
+      object-fit: cover;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+    }
+
+    .speaker-card h3 {
+      margin: 0.5rem 0;
+      font-size: 1.3rem;
+      color: #222;
+    }
+
+    .speaker-card p {
+      font-size: 0.95rem;
+      color: #444;
+      line-height: 1.5;
+      text-align: left;
+    }
+
+    .speaker-church {
+      font-style: italic;
+      color: #666;
+      margin-bottom: 1rem;
+    }
+  </style>
 </head>
 <body>
-  <div class="logo-container">
-    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
-  </div>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="speakers.html">Speakers</a>
-    <a href="register.html">Register</a>
-  </nav>
-
-  <section>
-    <h2>Speakers</h2>
-
-    <div class="speaker-item">
-      <img src="https://via.placeholder.com/60" alt="Dr. Adam Rimmer" class="speaker-photo">
-      <div>
-        <span class="speaker-name">Dr. Adam Rimmer</span>
-        <span class="speaker-church">Walnut Grove Baptist Church</span>
-      </div>
+  <header>
+    <div class="logo-container">
+      <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
     </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="speakers.html">Speakers</a>
+      <a href="register.html">Register</a>
+    </nav>
+  </header>
 
-    <div class="speaker-item">
-      <img src="https://via.placeholder.com/60" alt="Tommy Warner" class="speaker-photo">
-      <div>
-        <span class="speaker-name">Tommy Warner</span>
-        <span class="speaker-church">Hardeman County Baptist Association Missionary</span>
+  <main>
+    <h1 style="text-align:center;">Meet Our Speakers</h1>
+    <div class="speakers-container">
+      
+      <!-- Adam Rimmer -->
+      <div class="speaker-card">
+        <img src="Adam Rimmer.jpg" alt="Dr. Adam Rimmer">
+        <h3>Dr. Adam Rimmer</h3>
+        <div class="speaker-church">Walnut Grove Baptist Church</div>
+        <p>
+          Adam Rimmer is the Pastor at Walnut Grove Baptist Church and a full-time Prison Minister with Men of Valor Ministry. 
+          Originally from Knoxville, Tennessee, Adam moved to West Tennessee to be the chaplain at Whiteville Correctional Facility 
+          for two years before joining Men of Valor. He achieved his Bachelor's in Chemistry from the University of Tennessee Knoxville in 2013, 
+          a Master's of Divinity from Liberty University in 2019, a Doctorate of Ministry from Liberty University in 2021, 
+          and is nearing completion of a Ph.D. in Hermeneutics from Liberty University.
+        </p>
       </div>
-    </div>
 
-    <div class="speaker-item">
-      <img src="https://via.placeholder.com/60" alt="Dr. Adam Barnhart" class="speaker-photo">
-      <div>
-        <span class="speaker-name">Dr. Adam Barnhart</span>
-        <span class="speaker-church">Freedom Hope Church</span>
+      <!-- Alfonso Gilbert -->
+      <div class="speaker-card">
+        <img src="Alfonso Gilbert.png" alt="Dr. Alfonso Gilbert">
+        <h3>Dr. Alfonso Gilbert</h3>
+        <div class="speaker-church">Men of Valor Prison Ministry</div>
+        <p>
+          Alfonso Gilbert is the chief education officer at Men of Valor Prison Ministry, speaking in prisons, organizations, and churches 
+          on trauma and recovery. He is also an adjunct professor for preaching and leadership at Grand Canyon Theological Seminary. 
+          He holds a Master of Divinity from Azusa Pacific University, a Master’s in Theological Studies from Bethel Seminary in San Diego, 
+          and a Doctorate in Leadership from Bethel University in St. Paul, Minnesota. Alfonso and his wife, Erica, live in Nashville, TN, 
+          with their 4 adult children, 2 sons-in-law, and 2 grandchildren.
+        </p>
       </div>
-    </div>
 
-    <div class="speaker-item">
-      <img src="https://via.placeholder.com/60" alt="Matt Boatwright" class="speaker-photo">
-      <div>
-        <span class="speaker-name">Matt Boatwright</span>
-        <span class="speaker-church">Parrans Chapel Baptist Church</span>
+      <!-- Tommy Warner -->
+      <div class="speaker-card">
+        <img src="Tommy Warner.png" alt="Tommy Warner">
+        <h3>Tommy Warner</h3>
+        <div class="speaker-church">Hardeman County Baptist Association Missionary</div>
+        <p>
+          Tommy Warner is an experienced West Tennessee Southern Baptist pastor with over 40 years of ministry experience. 
+          He has served on foreign mission trips to train pastors and leaders and came to the HCBA in October of 2013. 
+          He is the proud father of two boys, grandfather of five, and happily married for over 45 years to Beverly. 
+          Tommy graduated from Bolivar Central in 1977, earned his BA at Union University in 1986, and his Master of Divinity 
+          in 2008 from Mid-America Baptist Theological Seminary in Cordova, TN. His hobbies include sudoku, crossword puzzles, 
+          hunting, and farm work in West Tennessee.
+        </p>
       </div>
-    </div>
 
-    <div class="speaker-item">
-      <img src="https://via.placeholder.com/60" alt="Dr. Rusty Keltner" class="speaker-photo">
-      <div>
-        <span class="speaker-name">Dr. Rusty Keltner</span>
-        <span class="speaker-church">Porters Creek Baptist Church</span>
-      </div>
     </div>
-
-    <div class="speaker-item">
-      <img src="https://via.placeholder.com/60" alt="Kyle Rhea" class="speaker-photo">
-      <div>
-        <span class="speaker-name">Kyle Rhea</span>
-        <span class="speaker-church">First Baptist Church of Bolivar</span>
-      </div>
-    </div>
-
-    <div class="speaker-item">
-      <img src="https://via.placeholder.com/60" alt="Dr. Alfonso Gilbert" class="speaker-photo">
-      <div>
-        <span class="speaker-name">Dr. Alfonso Gilbert</span>
-        <span class="speaker-church">[Church/Ministry TBD]</span>
-      </div>
-    </div>
-
-  </section>
+  </main>
 
   <footer>
-    <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
+    <p>&copy; 2026 Eleos Conference. All rights reserved.</p>
   </footer>
 </body>
 </html>
