--- a/speakers.html
+++ b/speakers.html
@@ -86,7 +86,7 @@
 
       <!-- Alfonso Gilbert -->
       <div class="speaker-card">
-        <img src="Alfonso Gilbert.png" alt="Dr. Alfonso Gilbert">
+        <img src="Alfonoso Gilbert.png" alt="Dr. Alfonso Gilbert">
         <h3>Dr. Alfonso Gilbert</h3>
         <div class="speaker-church">Men of Valor Prison Ministry</div>
         <p>
