--- a/register.html
+++ b/register.html
@@ -3,31 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register | Eleos Conference 2026</title>
+  <title>Register - Eleos Conference 2026</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="logo-container">
-    <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
-  </div>
+  <header>
+    <div class="logo-container">
+      <img src="Eleos-removebg-preview.png" alt="Eleos Conference 2026 Logo">
+    </div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="schedule.html">Schedule</a>
+      <a href="speakers.html">Speakers</a>
+      <a href="register.html">Register</a>
+    </nav>
+  </header>
 
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="schedule.html">Schedule</a>
-    <a href="speakers.html">Speakers</a>
-    <a href="register.html">Register</a>
-  </nav>
+  <main>
+    <h1 style="text-align:center;">Register for Eleos Conference 2026</h1>
+    <p style="text-align:center;">Fill out the form below to secure your spot.</p>
 
-  <section>
-    <h2>Register</h2>
-    <p>Tickets are $20 per person. Reserve your spot today and join us for Eleos Conference 2026.</p>
-    <!-- TODO: Replace this link with your Cognito embed -->
-    <a href="#" class="btn">Register Now</a>
-  </section>
+    <!-- Cognito Form Embed -->
+    <div style="max-width: 800px; margin: 2rem auto; background:#fff; padding:2rem; border-radius:12px; box-shadow:0 2px 8px rgba(0,0,0,0.1);">
+      <script src="https://www.cognitoforms.com/f/seamless.js" 
+              data-key="Cqg4e5mJc0mnLrHIbC3fMg" 
+              data-form="2">
+      </script>
+    </div>
+  </main>
 
   <footer>
-    <p>&copy; 2026 Eleos Conference. All Rights Reserved.</p>
+    <p>&copy; 2026 Eleos Conference. All rights reserved.</p>
   </footer>
 </body>
 </html>
-
