--- a/index.html
+++ b/index.html
@@ -21,18 +21,13 @@
 
   <main class="with-sidebars">
     <aside class="sidebar left">
-      <p>
-        "When Jesus saw him lying there, and knew that he had already been a long time in that condition, 
-        He said to him, <strong>‘Do you want to be well?’</strong>"  
-        <br><em>John 5:6 NASB</em>
-      </p>
+      <p>“When Jesus saw him lying there, and knew that he had already been a long time in that condition, He said to him, <strong>‘Do you want to be well?’</strong>” <br><em>John 5:6 NASB</em></p>
     </aside>
 
     <section class="card">
       <h1>Welcome to Eleos Conference 2026</h1>
       <p>
-        Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, 
-        strengthening the Church, and equipping believers for ministry.  
+        Join us for a gathering of leaders, teachers, and disciples dedicated to exploring the Word of God, strengthening the Church, and equipping believers for ministry.  
       </p>
       <h2>Conference Details</h2>
       <p><strong>Date:</strong> January 2–3, 2026</p>
@@ -40,14 +35,17 @@
     </section>
 
     <aside class="sidebar right">
-      <p><strong>"Do you want to be well?"</strong></p>
+      <p><strong>“Do you want to be well?”</strong></p>
     </aside>
   </main>
+
+  <!-- Register Button Section -->
+  <div style="text-align: center; margin: 2rem 0;">
+    <a href="register.html" class="btn">Register Now</a>
+  </div>
 
   <footer>
     <p>&copy; 2026 Eleos Conference. All rights reserved.</p>
   </footer>
 </body>
 </html>
-
-
